Fix cors method overload
